--- a/_includes/header_projects.html
+++ b/_includes/header_projects.html
@@ -9,3 +9,10 @@
       </h2>
     </div>
 </div>
+
+
+<div class="row justify-content-center">
+  <div class="col-sm-10 col-lg-8">
+    {{ page.description }}
+  </div>
+</div>
